// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StateInput.vue > should filter out those that doesnt match the search 1`] = `
<v-autocomplete-stub
  active="false"
  autofocus="false"
  autoselectfirst="false"
  chips="false"
  clearable="true"
  clearicon="$clear"
  clearonselect="false"
  closablechips="false"
  closetext="$vuetify.close"
  counter="false"
  density="default"
  disabled="false"
  eager="false"
  error="false"
  errormessages=""
  filterkeys="title"
  filtermode="intersection"
  flat="false"
  focused="false"
  glow="false"
  hidedetails="false"
  hidenodata="false"
  hideselected="true"
  hidespinbuttons="false"
  iconcolor="false"
  itemchildren="false"
  itemprops="props"
  items="[object Object],[object Object]"
  itemtitle="final_label"
  itemtype="type"
  itemvalue="value"
  label="Test state"
  loading="false"
  maxerrors="1"
  menu="false"
  menuicon="$dropdown"
  messages=""
  multiple="false"
  noautoscroll="false"
  nodatatext="$vuetify.noDataText"
  nofilter="false"
  openonclear="false"
  opentext="$vuetify.open"
  persistentclear="false"
  persistentcounter="false"
  persistenthint="false"
  persistentplaceholder="false"
  returnobject="true"
  reverse="false"
  role="combobox"
  rules=""
  search="Op"
  singleline="false"
  tile="false"
  type="text"
  variant="filled"
/>
`;

exports[`StateInput.vue > should not fetch states unless the typing starts 1`] = `<!--v-if-->`;

exports[`StateInput.vue > should not show creating state option when user is not authorized 1`] = `
<v-autocomplete-stub
  active="false"
  autofocus="false"
  autoselectfirst="false"
  chips="false"
  clearable="true"
  clearicon="$clear"
  clearonselect="false"
  closablechips="false"
  closetext="$vuetify.close"
  counter="false"
  density="default"
  disabled="false"
  eager="false"
  error="false"
  errormessages=""
  filterkeys="title"
  filtermode="intersection"
  flat="false"
  focused="false"
  glow="false"
  hidedetails="false"
  hidenodata="false"
  hideselected="true"
  hidespinbuttons="false"
  iconcolor="false"
  itemchildren="false"
  itemprops="props"
  items="[object Object],[object Object]"
  itemtitle="final_label"
  itemtype="type"
  itemvalue="value"
  label="Test state"
  loading="false"
  maxerrors="1"
  menu="false"
  menuicon="$dropdown"
  messages=""
  multiple="false"
  noautoscroll="false"
  nodatatext="$vuetify.noDataText"
  nofilter="false"
  openonclear="false"
  opentext="$vuetify.open"
  persistentclear="false"
  persistentcounter="false"
  persistenthint="false"
  persistentplaceholder="false"
  returnobject="true"
  reverse="false"
  role="combobox"
  rules=""
  search="sta"
  singleline="false"
  tile="false"
  type="text"
  variant="filled"
/>
`;

exports[`StateInput.vue > should show creating state option when user is authorized 1`] = `
<v-autocomplete-stub
  active="false"
  autofocus="false"
  autoselectfirst="false"
  chips="false"
  clearable="true"
  clearicon="$clear"
  clearonselect="false"
  closablechips="false"
  closetext="$vuetify.close"
  counter="false"
  density="default"
  disabled="false"
  eager="false"
  error="false"
  errormessages=""
  filterkeys="title"
  filtermode="intersection"
  flat="false"
  focused="false"
  glow="false"
  hidedetails="false"
  hidenodata="false"
  hideselected="true"
  hidespinbuttons="false"
  iconcolor="false"
  itemchildren="false"
  itemprops="props"
  items="[object Object],[object Object],[object Object]"
  itemtitle="final_label"
  itemtype="type"
  itemvalue="value"
  label="Test state"
  loading="false"
  maxerrors="1"
  menu="false"
  menuicon="$dropdown"
  messages=""
  multiple="false"
  noautoscroll="false"
  nodatatext="$vuetify.noDataText"
  nofilter="false"
  openonclear="false"
  opentext="$vuetify.open"
  persistentclear="false"
  persistentcounter="false"
  persistenthint="false"
  persistentplaceholder="false"
  returnobject="true"
  reverse="false"
  role="combobox"
  rules=""
  search="sta"
  singleline="false"
  tile="false"
  type="text"
  variant="filled"
/>
`;
